# LMSRGC

./: license.txt  readme.txt
LMSRGC/: DMat  LMSRGC  Makefile  libsuffix_array.so.bak
LMSRGC/src/: .gpu_lcp.cu.swo  gpu_lcp.cu  parser.cpp  parser.h  run.cpp  suffix_array.h
LMSRGC/src/RMQ/: RMQ_1_n.cpp  RMQ_succinct.cpp  RMQ_succinct.hpp  testRMQ.cpp
LMSRGC/src/include/: gpu_lcp.h  kmacs.h  kvec.h
LMSRGC/src/libbsc/: bsc.cpp  bsc.h
LMSRGC/src/multi-gpu-suffix-array/: .gitignore  CMakeLists.txt  README.md
LMSRGC/src/multi-gpu-suffix-array/include/: common.cuh
LMSRGC/src/multi-gpu-suffix-array/src/: cuda_helpers.h  io.cu  io.cuh  merge_copy_detour_guide.hpp  my_mgpu_context.hxx  performancerecorder.hpp  prefix_doubling.hpp  qdallocator.hpp  stages.h  suffix_array.cu  suffix_array_kernels.cu  suffix_array_kernels.cuh  suffix_array_templated_kernels.cuh  suffix_types.h  suffixarraymemorymanager.hpp  suffixarrayperformancemeasurements.hpp  test_merges.cu  util.cpp  util.h
LMSRGC/src/multi-gpu-suffix-array/src/distrib_merge/: distrib_merge.hpp  distrib_merge_array.hpp  distrib_merge_topology_helper.hpp  test_distrib_merge.cu
LMSRGC/src/multi-gpu-suffix-array/src/gossip/: all_to_all.cuh  all_to_all_dgx1.cuh  auxiliary.cuh  context.cuh  gossip.cuh  multisplit.cuh
LMSRGC/src/multi-gpu-suffix-array/src/multisplit/: dispatch_multisplit.cuh
LMSRGC/src/multi-gpu-suffix-array/src/multisplit/api/: wms_api.h
LMSRGC/src/multi-gpu-suffix-array/src/multisplit/kernels/wms/: wms_prescan.cuh
LMSRGC/src/multi-gpu-suffix-array/src/remerge/: merge_types.hpp  mergenodeutils.hpp  mergeprocessor.hpp  multi_way_micromerge.hpp  multi_way_micromerge_on_one_node.hpp  multi_way_partitioning_search.hpp  remerge_gpu_topology_helper.hpp  remergemanager.hpp  two_way_micromerge.hpp
LMSRGDE/: LMSRGDE  Makefile
LMSRGDE/src/: run.cpp
